[gd_scene load_steps=16 format=2]

[ext_resource path="res://angler/AnglerAggro.gd" type="Script" id=1]
[ext_resource path="res://sprites/radialLight.png" type="Texture" id=2]
[ext_resource path="res://sprites/angler.png" type="Texture" id=3]
[ext_resource path="res://angler/AboutToAboutToBite.gd" type="Script" id=4]
[ext_resource path="res://angler/AboutToBite.gd" type="Script" id=5]
[ext_resource path="res://angler/AnglerKill.gd" type="Script" id=6]
[ext_resource path="res://angler/AnglerMove.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 65.8076

[sub_resource type="CircleShape2D" id=6]
radius = 21.4234

[sub_resource type="CircleShape2D" id=7]
radius = 30.951

[sub_resource type="CircleShape2D" id=8]
radius = 46.5082

[node name="AnimatedSprite" type="AnimatedSprite"]
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 4 )
speed_scale = 0.5
script = ExtResource( 7 )

[node name="Frame0" type="Light2D" parent="."]
position = Vector2( 29.3906, 2.5918 )
scale = Vector2( 0.0119802, 0.0119802 )
z_index = 1
texture = ExtResource( 2 )
color = Color( 0.304688, 0.560998, 1, 1 )
energy = 6.75

[node name="Frame1" type="Light2D" parent="."]
position = Vector2( 30.3594, -2.68945 )
scale = Vector2( 0.0119802, 0.0119802 )
z_index = 1
enabled = false
texture = ExtResource( 2 )
color = Color( 1, 0.027451, 0.00392157, 1 )
energy = 8.72

[node name="Frame2" type="Light2D" parent="."]
position = Vector2( 31.7969, -13.7539 )
scale = Vector2( 0.0119802, 0.0119802 )
z_index = 1
enabled = false
texture = ExtResource( 2 )
color = Color( 1, 0.027451, 0.00392157, 1 )
energy = 11.27

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.235294, 0.211765, 1, 1 )
self_modulate = Color( 0.176471, 0.152941, 0.996078, 1 )
position = Vector2( 29.4375, 2.88672 )
scale = Vector2( 0.012, 0.012 )
texture = ExtResource( 2 )

[node name="Aggro" type="Area2D" parent="."]
position = Vector2( -1.23376, 4.94096 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro"]
shape = SubResource( 5 )

[node name="Bite" type="Area2D" parent="."]
position = Vector2( -1.23376, 4.94096 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bite"]
shape = SubResource( 6 )

[node name="AboutToBite" type="Area2D" parent="."]
position = Vector2( -1.23376, 4.94096 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AboutToBite"]
shape = SubResource( 7 )

[node name="AboutToAboutToBite" type="Area2D" parent="."]
position = Vector2( -1.23376, 4.94096 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AboutToAboutToBite"]
shape = SubResource( 8 )
